--- a/StudentLibrary.csproj
+++ b/StudentLibrary.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,60 +61,68 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormBookDetails.cs">
+    <Compile Include="Classes\Book.cs" />
+    <Compile Include="Classes\Loan.cs" />
+    <Compile Include="Classes\Student.cs" />
+    <Compile Include="Database\DatabaseDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormBookDetails.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormBookDetails.Designer.cs">
+    <Compile Include="Forms\FormBookDetails.Designer.cs">
       <DependentUpon>FormBookDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormBooks.cs">
+    <Compile Include="Forms\FormBooks.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormBooks.Designer.cs">
+    <Compile Include="Forms\FormBooks.Designer.cs">
       <DependentUpon>FormBooks.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormLoanDetails.cs">
+    <Compile Include="Forms\FormLoanDetails.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormLoanDetails.Designer.cs">
+    <Compile Include="Forms\FormLoanDetails.Designer.cs">
       <DependentUpon>FormLoanDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormLoans.cs">
+    <Compile Include="Forms\FormLoans.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormLoans.Designer.cs">
+    <Compile Include="Forms\FormLoans.Designer.cs">
       <DependentUpon>FormLoans.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormStudentDetails.cs">
+    <Compile Include="Forms\FormStudentDetails.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormStudentDetails.Designer.cs">
+    <Compile Include="Forms\FormStudentDetails.Designer.cs">
       <DependentUpon>FormStudentDetails.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormStudents.cs">
+    <Compile Include="Forms\FormStudents.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormStudents.Designer.cs">
+    <Compile Include="Forms\FormStudents.Designer.cs">
       <DependentUpon>FormStudents.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Classes\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormBookDetails.resx">
+    <EmbeddedResource Include="Forms\FormBookDetails.resx">
       <DependentUpon>FormBookDetails.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormBooks.resx">
+    <EmbeddedResource Include="Forms\FormBooks.resx">
       <DependentUpon>FormBooks.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormLoanDetails.resx">
+    <EmbeddedResource Include="Forms\FormLoanDetails.resx">
       <DependentUpon>FormLoanDetails.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormLoans.resx">
+    <EmbeddedResource Include="Forms\FormLoans.resx">
       <DependentUpon>FormLoans.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormStudentDetails.resx">
+    <EmbeddedResource Include="Forms\FormStudentDetails.resx">
       <DependentUpon>FormStudentDetails.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormStudents.resx">
+    <EmbeddedResource Include="Forms\FormStudents.resx">
       <DependentUpon>FormStudents.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -111,6 +134,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Database\DatabaseDataSet.xsc">
+      <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Database\DatabaseDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DatabaseDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database\DatabaseDataSet.xss">
+      <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -124,5 +158,27 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Database\Database.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database\Database_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>Database.mdf</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
